Drop support for Python <= 3.6.

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,12 @@
 [tox]
-envlist = py27,py35,py36,py37
+envlist = py37,py38,py39,py310,py311
 
 
 [testenv]
 commands =
     py.test --cov lektor_rst {posargs} --cov-report term --cov-report html:{toxinidir}/htmlcov_{envname}
 deps =
+    flake8<5
     pyquery
     pytest
     pytest-cov
